--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Welcome#index</h1>
 <p>Find me in app/views/welcome/index.html.erb</p>
 
-<!-- kit = IMGKit.new('http://google.com') -->
+<!-- kit = IMGKit.new('http://www.google.com') -->
 <!-- file = kit.to_file(Rails.root + "app/assets/" + "file.jpg") -->
